--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,7 @@ android {
     }
 
     buildFeatures {
+        viewBinding = true
         buildConfig true
     }
 
@@ -41,6 +42,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
 
+    implementation 'androidx.recyclerview:recyclerview:1.4.0'
 
     //font size
     implementation 'com.intuit.sdp:sdp-android:1.1.1'
