--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".activities.SplashActivity"
+            android:name=".core.main.SplashActivity"
             android:exported="true"
             android:label="@string/app_name_use"
             android:screenOrientation="portrait"
@@ -61,11 +61,11 @@
         </activity>
 
         <activity
-            android:name=".activities.MyBlockListActivity"
+            android:name=".core.myblocklist.MyBlockListActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".activities.OnBoardingActivity"
+            android:name=".core.onboarding.OnBoardingActivity"
             android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.MyApp.Fullscreen" >
@@ -84,12 +84,12 @@
         </activity>
 
         <activity
-            android:name=".activities.OnBoardingOverlayPermissionActivity"
+            android:name=".core.onboadingoverlay.OnBoardingOverlayPermissionActivity"
             android:theme="@style/Theme.MyApp.Fullscreen"
             android:screenOrientation="portrait" />
 
         <activity
-            android:name=".activities.DashboardActivity"
+            android:name=".core.main.DashboardActivity"
             android:exported="true"
             android:label="@string/app_name_use"
             android:windowSoftInputMode="adjustPan|adjustResize"
@@ -129,32 +129,22 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.PermissionInfoActivity"
-            android:exported="false"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".activities.EditProfileActivity"
-            android:exported="false"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".activities.FeedbackActivity"
-            android:exported="false"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".activities.LanguageActivity"
-            android:exported="false"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".activities.CountryActivity"
-            android:exported="false"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".activities.ContactDetailsViewActivity"
+            android:name=".core.permission.PermissionInfoActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
 
         <activity
-            android:name=".activities.ContactHistoryDetailsActivity"
+            android:name=".core.language.LanguageActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".core.contactdetails.ContactDetailsViewActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".core.contactdetails.ContactHistoryDetailsActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
 
